--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -4,11 +4,9 @@ summary: A very tiny proxy server
 description: |
     A small http proxy with the ability to manage url black/white lists.
     .
-    To change the configuartion edit /var/snap/tinyproxy/current/tinyproxy.conf
-    and restart the service with "sudo snap restart tinyproxy-ogra"
-    .
-    To define filter rules for blocked urls you can edit /var/snap/tinyproxy/current/filter
-    and restart the service with "sudo snap restart tinyproxy-ogra"
+    Configuration can be done via the snap set/get commands, for supported
+    options and examples please see the README.md at
+    https://github.com/ogra1/tinyproxy-snap/blob/master/README.md
 
 confinement: strict
 grade: stable
